# nornir-mcp-server

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  config.yaml  docker-compose.yml  project_review.md  pyproject.toml  repomix-output.md  run_verification.py  spec.md
bugs/: fix_nornir_filter_bug.md
examples/: config.yaml
examples/conf/: blacklist.yaml  defaults.yaml  groups.yaml  hosts.yaml
examples/inventory/: defaults.yaml  groups.yaml  hosts.yaml
resources/: cisco_ios_commands.json  napalm_getters.json  topology.json
src/nornir_mcp/: __init__.py  application.py  config.py  models.py  prompts.py  resources.py  server.py
src/nornir_mcp/services/: backup.py  inventory.py  napalm.py  netmiko.py  runner.py
src/nornir_mcp/tools/: __init__.py  advanced_monitoring.py  backup.py  config_mgmt.py  configuration.py  inventory.py  management.py  monitoring.py  napalm.py  netmiko.py  networking.py  operational.py  system.py
src/nornir_mcp/utils/: __init__.py  common.py  config.py  errors.py  files.py  filters.py  formatters.py  helpers.py  napalm_helpers.py  nornir_helper.py  results.py  security.py  tasks.py  validation_helpers.py
tests/: conftest.py  test_common.py  test_filters.py  test_inventory.py  test_inventory_service.py  test_management.py  test_model_conformance.py  test_models.py  test_monitoring.py  test_napalm_service.py  test_napalm_tools.py  test_netmiko_tools.py  test_results.py  test_runner.py  test_security.py
