[project]
name = "nornir-mcp-server"
version = "0.1.0"
description = "Nornir MCP Server for Network Engineering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "nornir>=3.4.0",
    "nornir-napalm>=0.4.0",
    "nornir-netmiko>=1.0.0",
    "napalm>=4.1.0",
    "netmiko>=4.3.0",
    "textfsm>=1.1.3",
    "genie>=23.12",
    "pyats>=23.12",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
nornir-mcp = "nornir_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
