[project]
name = "nornir-mcp-server"
version = "0.1.0"
description = "Nornir MCP Server for Network Engineering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "nornir>=3.4.0",
    "nornir-napalm>=0.4.0",
    "nornir-netmiko>=1.0.0",
    "napalm>=4.1.0",
    "netmiko>=4.3.0",
    "pydantic>=2.0.0",
    "redis<5",
    "pyyaml>=6.0",
]

[project.scripts]
nornir-mcp = "nornir_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]


[dependency-groups]
dev = ["ruff>=0.14.11"]
