[project]
name = "nornir-mcp-server"
version = "0.1.0"
description = "Nornir MCP Server for Network Engineering"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "fastmcp>=2.0.0,<2.14.0",
    "nornir>=3.4.0",
    "nornir-napalm>=0.4.0",
    "nornir-netmiko>=1.0.0",
    "napalm>=4.1.0",
    "netmiko>=4.3.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
nornir-mcp = "nornir_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["S101"]


[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.11",
]
